<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".activities.ContactUsActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="6dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/back_img" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato_black"
            android:text="@string/contact_us"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/name1"
                    android:textColor="#838383" />

                <EditText
                    android:id="@+id/name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/enter"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ. "
                    android:inputType="textPersonName"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_gray1"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/email_id"
                    android:textColor="#838383" />

                <EditText
                    android:id="@+id/email_id_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/enter"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_gray1"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/phone_number"
                    android:textColor="#838383" />

                <EditText
                    android:id="@+id/phone_number_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/enter"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_gray1"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/message"
                    android:textColor="#838383" />

                <EditText
                    android:id="@+id/message_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/enter"
                    android:inputType="textMultiLine"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_gray1"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/continue_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/lato"
                    android:padding="12dp"
                    android:text="@string/continue1"
                    android:textAllCaps="false"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:gravity="center"
                    android:padding="30dp"
                    android:text="@string/or"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/call_now_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:backgroundTint="@color/green"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/call_now_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxHeight="50dp"
                        android:src="@drawable/call"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/textView50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/call_now" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView51"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/address"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edit_text_bg"
                    android:fontFamily="@font/lato"
                    android:padding="12dp"
                    android:text="MED RAYDER Merchant Towers, Road No 4, Green Valley, Banjara Hills, Hyderabad, Telangana 500034"
                    android:textColor="@color/light_black" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:indicatorColor="@color/blue"
        app:indicatorName="LineSpinFadeLoaderIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>